package main

import (
	"context"
	pb "github.com/IT-IPOTEKA-25/kamchatka-backend" // Import the generated proto package
)

type server struct {
	pb.UnimplementedKamchatkaServiceServer
}

func (s *server) GetTerritoryCoordinates(ctx context.Context, req *pb.GetTerritoryCoordinatesRequest) (*pb.GetTerritoryCoordinatesResponse, error) {
	// Implement your logic here
	return &pb.GetTerritoryCoordinatesResponse{}, nil
}

func (s *server) GetRecreationalCapacity(ctx context.Context, req *pb.GetRecreationalCapacityRequest) (*pb.GetRecreationalCapacityResponse, error) {
	// Implement your logic here
	return &pb.GetRecreationalCapacityResponse{}, nil
}

func (s *server) AddAlert(ctx context.Context, req *pb.AddAlertRequest) (*pb.StringResultResponse, error) {
	// Implement your logic here
	return &pb.StringResultResponse{}, nil
}

func (s *server) CreateUser(ctx context.Context, req *pb.CreateUserRequest) (*pb.CreateUserResponse, error) {
	// Implement your logic here
	return &pb.CreateUserResponse{}, nil
}

func (s *server) UpdateRecreationalCapacity(ctx context.Context, req *pb.UpdateRecreationalCapacityRequest) (*pb.UpdateRecreationalCapacityResponse, error) {
	// Implement your logic here
	return &pb.UpdateRecreationalCapacityResponse{}, nil
}
